<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_url_to_perform_http_request"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textColor="@color/black"
                android:layout_marginVertical="5dp"/>

            <EditText
                android:id="@+id/host_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_gray_shape"
                android:hint="@string/host"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/method"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/method_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/method_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue_button"
                    android:checked="true"
                    android:text="@string/get"
                    android:textColor="@color/black"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:id="@+id/method_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue_button"
                    android:text="@string/post"
                    android:textColor="@color/black"
                    tools:targetApi="lollipop" />

            </RadioGroup>

            <Button
                android:id="@+id/submit_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="@color/blue_button"
                android:text="@string/submit"
                tools:ignore="RtlHardcoded"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textColor="@color/red"
                android:layout_marginVertical="5dp"/>

            <TextView
                android:id="@+id/result_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>